<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="#FCF9FA"
android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:padding="10dp"
    android:elevation="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"

        android:contentDescription="@string/profile"
        app:civ_border_width="1dp"

        android:src="@drawable/already1"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="1dp"
        android:text="@string/user_name"
        android:textAlignment="textStart"
        android:textColor="@color/home_text_color"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/date"
        android:textColor="@color/home_text_color"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
        android:id="@+id/post_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_desc"
        android:inputType="textShortMessage|textLongMessage|textAutoCorrect|textMultiLine|numberPassword|textCapWords|textEmailSubject"

        android:paddingLeft="10dp"
        android:textColor="@color/home_text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_post"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description"
        app:layout_constraintVertical_bias="0.217"
        app:srcCompat="@drawable/ic_audiotrack_light" />



</android.support.constraint.ConstraintLayout>